--- a/view.html
+++ b/view.html
@@ -33,7 +33,7 @@
             </h3>
         </div>
         <div class="row" id="mainDiv">
-            <a href="bky8atuqk"> &lt;-- Back to Dashboard </a>
+            <a href="index.html"> &lt;-- Back to Dashboard </a>
             <h3>View Family Interactions - 1789</h3>
             <div class="container">
                 <div class="row">
