--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <a href="bky8atuqk"> &lt;-- Back to Dashboard </a>
             <h3> List of Family Interactions </h3>
             <div class="save" style="float:right;">
-                <a class="btn btn-primary" href="add.html">Add New Interaction</a>
+                <a class="btn btn-primary" href="addFamily.html">Add family to my caseload</a>
+                <a class="btn btn-primary" href="addActions.html">Add actions</a>
             </div>
             <div style="clear:both;" /><br />
             <table class="table table-hover table-bordered table-striped" id="bulkRequestTable">
@@ -44,7 +45,6 @@
                     <tr>
                         <th></th>
                         <th>Category</th>
-                        <th>Family Name</th>
                         <th>Student Name</th>
                         <th>Status</th>
                         <th># of Actions</th>
@@ -54,14 +54,43 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td colspan="7">mom &amp; dad - 1200 1st street NE, Washington DC. Ph: 123-456-7890 </td>
+                    </tr>
+                    <tr>
                         <td><a href="view.html"><img src="icon_eye_gray.png" /></a></td>
                         <td>Attendence</td>
-                        <td>mom &amp; dad</td>
                         <td>John Doe</td>
                         <td>Completed</td>
                         <td>2</td>
                         <td> 10/24/2018 </td>
                         <td>[OCT-24-17 Sudheer(DCPS) Keshetty] The OHA form for this child was collected from the school nurse. The date of the exam is 3/22/18. The form will be submitted to the ECE QA team for data entry.</td>
+                    </tr>
+                    <tr>
+                        <td><a href="view.html"><img src="icon_eye_gray.png" /></a></td>
+                        <td>Behaviour Support</td>
+                        <td>John Doe</td>
+                        <td>Completed</td>
+                        <td>2</td>
+                        <td> 10/24/2018 </td>
+                        <td>[OCT-24-17 Sudheer(DCPS) Keshetty] The OHA form for this child was collected from the school nurse. The date of the exam is 3/22/18. The form will be submitted to the ECE QA team for data entry.</td>
+                    </tr>
+                    <tr>
+                        <td colspan="7">mom2 &amp; dad2 - 1200 1st street NE, Washington DC. Ph: 098-765-4321 </td>
+                    </tr>
+                    <tr>
+                        <td><a href="view.html"><img src="icon_eye_gray.png" /></a></td>
+                        <td>Attendence</td>
+                        <td>-</td>
+                        <td>Completed</td>
+                        <td>1</td>
+                        <td> 11/02/2018 </td>
+                        <td>[OCT-24-17 Sudheer(DCPS) Keshetty] The OHA form for this child was collected from the school nurse. The date of the exam is 3/22/18. The form will be submitted to the ECE QA team for data entry.</td>
+                    </tr>
+                    <tr>
+                        <td colspan="7">mom3 - 1200 1st street NE, Washington DC. Ph: 098-765-4321 </td>
+                    </tr>
+                    <tr>
+                        <td colspan="7">No interactions found</td>
                     </tr>
                 </tbody>
             </table>
