--- a/view.html
+++ b/view.html
@@ -33,8 +33,8 @@
             </h3>
         </div>
         <div class="row" id="mainDiv">
-            <a href="bky8atuqk"> &lt;-- Back to Dashboard </a>
-            <h3>View Family Interactions - 1789</h3>
+            <a href="index.html"> &lt;-- Back to Dashboard </a>
+            <h3>Family Interactions - 1789</h3>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -122,17 +122,18 @@
                                     <th>Date</th>
                                     <th>Communication</th>
                                     <th>Contact</th>
-                                    <th>Note</th>
+                                    <th>Topic Discussed</th>
                                     <th>Status</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td nowrap="nowarap"><a href="view.html"><img src="icon_eye_gray.png" /></a>
-                                        <a href="view.html"><span class="text-danger">x</span></a></td>
+                                        <a href="view.html"><span class="text-danger">X</span></a></td>
                                     <td>12-1-2018</td>
                                     <td>Phone Call</td>
-                                    <td>Coordinator met with Ms. Jane and requested local aftercare for ECE family? Ms. Jane gave flyers for two local after school programs to coordinator</td>
+                                    <td>Medical Provider</td>
+                                    <td>Attendence</td>
                                     <td>Completed</td>
                                 </tr>
                                 <tr>
@@ -140,7 +141,8 @@
                                         <a href="view.html"><span class="text-danger">x</span></a></td>
                                     <td>12-2-2018</td>
                                     <td>Phone Call</td>
-                                    <td>Coordinator met with Ms. Jane and requested local aftercare for ECE family? Ms. Jane gave flyers for two local after school programs to coordinator</td>
+                                    <td>Nurse</td>
+                                    <td>Child Care</td>
                                     <td>On Going</td>
                                 </tr>
                             </tbody>
